стилизовал О нас (about) кроме слайдеров и анимационного куска

--- a/src/pages/about.pug
+++ b/src/pages/about.pug
@@ -32,21 +32,21 @@ block content
         h3.about__subhead Наш подход к реализации образовательных программ:
     .about__list
       .row
-        .col-md-3.hidden-sm.hidden-xs
-        .col-md-6.col-sm-12.about__list-item.about__list-item--one Мониторинг законодательства и проведение исследований в области профессиональных интересов нашей аудитории;
-        .col-md-3.hidden-sm.hidden-xs
+        .col-md-2.hidden-sm.hidden-xs
+        .col-md-8.col-sm-12.about__list-item.about__list-item--one Мониторинг законодательства и проведение исследований в области профессиональных интересов нашей аудитории;
+        .col-md-2.hidden-sm.hidden-xs
       .row
-        .col-md-3.hidden-sm.hidden-xs
-        .col-md-6.col-sm-12.about__list-item.about__list-item--two Подбор экспертов определенной области знаний, в соответствии с направленностью образовательных программ;
-        .col-md-3.hidden-sm.hidden-xs
+        .col-md-2.hidden-sm.hidden-xs
+        .col-md-8.col-sm-12.about__list-item.about__list-item--two Подбор экспертов определенной области знаний, в соответствии с направленностью образовательных программ;
+        .col-md-2.hidden-sm.hidden-xs
       .row
-        .col-md-3.hidden-sm.hidden-xs
-        .col-md-6.col-sm-12.about__list-item.about__list-item--three Наличие внутренней системы контроля качества и внешний аудит образовательных программ.
-        .col-md-3.hidden-sm.hidden-xs
+        .col-md-2.hidden-sm.hidden-xs
+        .col-md-8.col-sm-12.about__list-item.about__list-item--three Наличие внутренней системы контроля качества и внешний аудит образовательных программ.
+        .col-md-2.hidden-sm.hidden-xs
     .row
       .col-xs-12
         .quotes
-          p.quotes__text Мало кто знает, что наша история началась в 2011 году, с организации всероссийского конкурса изобразительного искусства «Ангел Вдохновения», по воле случая, как мы любим говорить.
+          p.quotes__text Мало кто знает, что наша история началась в&#160;2011&#160;году, с&#160;организации всероссийского конкурса изобразительного искусства «Ангел Вдохновения», по воле случая, как мы любим говорить.
 
   section.about-docs.container
     .row
@@ -63,14 +63,14 @@ block content
     .row
       .col-xs-12
         .quotes
-          p.quotes__text Мы ежедневно создаем условия для развития способностей и профессионального роста, чтобы каждый участник смог проявить себя и не остаться без внимания для дальнейшего желания идти к своей мечте.
-          p.quotes__text Миссия организация, сформулирована в 2011 г.
+          p.quotes__text Мы ежедневно создаем условия для развития способностей и&#160;профессионального роста, чтобы каждый участник смог проявить себя и&#160;не&#160;статься без внимания для дальнейшего желания идти к&#160;своей мечте.
+          p.quotes__text.quotes__text--comment Миссия организация, сформулирована в 2011 г.
 
   section.about-history.container(id="about-history")
     .row
       .col-xs-12
         h2.about__title Наша история
-        p.about__text В феврале 2011 года был основан всероссийский образовательный проект «Razvitum» и созданы предпосылки для организации Санкт-Петербургского центра дополнительного профессионального образования
+        p.about__text В феврале 2011 года был основан всероссийский образовательный проект «Razvitum»#[br]и созданы предпосылки для организации Санкт-Петербургского центра#[br]дополнительного профессионального образования
     .row
       .col-xs-12.about-dates-slider
         .about-dates-slider__item
@@ -78,7 +78,7 @@ block content
           h4.about-dates-slider__title Конкурсы для детей
           p.about-dates-slider__text Организованы конкурсы «Ангел вдохновения», «Уши, ноги и хвосты», конкурс профессионального мастерства«Профи». За пять лет к конкурсной деятельности мы привлекли более 36 000 участников.
 
-  section.about-greet.jumbotron
+  section.about-greet
     .container
       .row
         .about-greet__img-wrap.mb-1.col-md-6.col-sm-12.col-xs-12
@@ -98,17 +98,43 @@ block content
         h2.about__title Фокус на инновационные решения
         p.about__text Для нас цифровые технологии — это возможность быть ближе к клиенту.
     .row
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Электронный документооборот
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Единое окно приема документов
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Адаптив под все типы устройств
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Упрощенная регистрация
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Интуитивный интерфейс личного кабинета
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Умный подбор программ
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4         Индивидуальный образовательный маршрут
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Интерактивный образовательный контент
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Учебная статистика и прогресс
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4
+        img(src="/img/razvitum-76.png", atl="")
+        p Электронный документооборот
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4
+        img(src="/img/razvitum-77.png", atl="")
+        p Единое окно приема документов
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4
+        img(src="/img/razvitum-78.png", atl="")
+        p Адаптив под все типы устройств
+    .row
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4
+        img(src="/img/razvitum-79.png", atl="")
+        p Упрощенная регистрация
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4
+        img(src="/img/razvitum-83.png", atl="")
+        p Интуитивный интерфейс личного кабинета
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4
+        img(src="/img/razvitum-84.png", atl="")
+        p Умный подбор программ
+    .row
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4
+        img(src="/img/razvitum-80.png", atl="")
+        p Индивидуальный образовательный маршрут
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4
+        img(src="/img/razvitum-82.png", atl="")
+        p Интерактивный образовательный контент
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4
+        img(src="/img/razvitum-75.png", atl="")
+        p Учебная статистика и прогресс
 
   section.about-facts(id="about-facts")
+    .container
+      .row
+        .col-xs-12
+          h2.about__title Цифры и факты
+    .about-facts__wrap.jumbotron
+
   block script
     script.
       $('#carousel-active').carousel();
