--- a/src/scss/_page.sass
+++ b/src/scss/_page.sass
@@ -97,6 +97,7 @@
 
 .quotes
   position: relative
+  margin: 55px 0 35px 0
   padding: 120px 75px
   border: 2px solid $accent
   &:before
@@ -115,4 +116,10 @@
     font-size: 1.875em
     line-height: 1.2em
     color: $headgray
+    &--comment
+      margin-top: 35px
+      margin-bottom: -50px
+      +ff-arial
+      font-size: 1.125em
+
 
