--- a/src/scss/spritePNG.scss
+++ b/src/scss/spritePNG.scss
@@ -9,193 +9,94 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
-$-icons-razvitum-75-name: 'Icons_Razvitum-75';
-$-icons-razvitum-75-x: 0px;
-$-icons-razvitum-75-y: 172px;
-$-icons-razvitum-75-offset-x: 0px;
-$-icons-razvitum-75-offset-y: -172px;
-$-icons-razvitum-75-width: 94px;
-$-icons-razvitum-75-height: 93px;
-$-icons-razvitum-75-total-width: 491px;
-$-icons-razvitum-75-total-height: 361px;
-$-icons-razvitum-75-image: '../img/spritePNG.png';
-$-icons-razvitum-75: (0px, 172px, 0px, -172px, 94px, 93px, 491px, 361px, '../img/spritePNG.png', 'Icons_Razvitum-75', );
-$-icons-razvitum-76-name: 'Icons_Razvitum-76';
-$-icons-razvitum-76-x: 98px;
-$-icons-razvitum-76-y: 172px;
-$-icons-razvitum-76-offset-x: -98px;
-$-icons-razvitum-76-offset-y: -172px;
-$-icons-razvitum-76-width: 93px;
-$-icons-razvitum-76-height: 93px;
-$-icons-razvitum-76-total-width: 491px;
-$-icons-razvitum-76-total-height: 361px;
-$-icons-razvitum-76-image: '../img/spritePNG.png';
-$-icons-razvitum-76: (98px, 172px, -98px, -172px, 93px, 93px, 491px, 361px, '../img/spritePNG.png', 'Icons_Razvitum-76', );
-$-icons-razvitum-77-name: 'Icons_Razvitum-77';
-$-icons-razvitum-77-x: 195px;
-$-icons-razvitum-77-y: 172px;
-$-icons-razvitum-77-offset-x: -195px;
-$-icons-razvitum-77-offset-y: -172px;
-$-icons-razvitum-77-width: 92px;
-$-icons-razvitum-77-height: 93px;
-$-icons-razvitum-77-total-width: 491px;
-$-icons-razvitum-77-total-height: 361px;
-$-icons-razvitum-77-image: '../img/spritePNG.png';
-$-icons-razvitum-77: (195px, 172px, -195px, -172px, 92px, 93px, 491px, 361px, '../img/spritePNG.png', 'Icons_Razvitum-77', );
-$-icons-razvitum-78-name: 'Icons_Razvitum-78';
-$-icons-razvitum-78-x: 203px;
-$-icons-razvitum-78-y: 0px;
-$-icons-razvitum-78-offset-x: -203px;
-$-icons-razvitum-78-offset-y: 0px;
-$-icons-razvitum-78-width: 102px;
-$-icons-razvitum-78-height: 94px;
-$-icons-razvitum-78-total-width: 491px;
-$-icons-razvitum-78-total-height: 361px;
-$-icons-razvitum-78-image: '../img/spritePNG.png';
-$-icons-razvitum-78: (203px, 0px, -203px, 0px, 102px, 94px, 491px, 361px, '../img/spritePNG.png', 'Icons_Razvitum-78', );
-$-icons-razvitum-79-name: 'Icons_Razvitum-79';
-$-icons-razvitum-79-x: 95px;
-$-icons-razvitum-79-y: 0px;
-$-icons-razvitum-79-offset-x: -95px;
-$-icons-razvitum-79-offset-y: 0px;
-$-icons-razvitum-79-width: 104px;
-$-icons-razvitum-79-height: 93px;
-$-icons-razvitum-79-total-width: 491px;
-$-icons-razvitum-79-total-height: 361px;
-$-icons-razvitum-79-image: '../img/spritePNG.png';
-$-icons-razvitum-79: (95px, 0px, -95px, 0px, 104px, 93px, 491px, 361px, '../img/spritePNG.png', 'Icons_Razvitum-79', );
-$-icons-razvitum-80-name: 'Icons_Razvitum-80';
-$-icons-razvitum-80-x: 309px;
-$-icons-razvitum-80-y: 0px;
-$-icons-razvitum-80-offset-x: -309px;
-$-icons-razvitum-80-offset-y: 0px;
-$-icons-razvitum-80-width: 91px;
-$-icons-razvitum-80-height: 93px;
-$-icons-razvitum-80-total-width: 491px;
-$-icons-razvitum-80-total-height: 361px;
-$-icons-razvitum-80-image: '../img/spritePNG.png';
-$-icons-razvitum-80: (309px, 0px, -309px, 0px, 91px, 93px, 491px, 361px, '../img/spritePNG.png', 'Icons_Razvitum-80', );
-$-icons-razvitum-82-name: 'Icons_Razvitum-82';
-$-icons-razvitum-82-x: 404px;
-$-icons-razvitum-82-y: 0px;
-$-icons-razvitum-82-offset-x: -404px;
-$-icons-razvitum-82-offset-y: 0px;
-$-icons-razvitum-82-width: 87px;
-$-icons-razvitum-82-height: 93px;
-$-icons-razvitum-82-total-width: 491px;
-$-icons-razvitum-82-total-height: 361px;
-$-icons-razvitum-82-image: '../img/spritePNG.png';
-$-icons-razvitum-82: (404px, 0px, -404px, 0px, 87px, 93px, 491px, 361px, '../img/spritePNG.png', 'Icons_Razvitum-82', );
-$-icons-razvitum-83-name: 'Icons_Razvitum-83';
-$-icons-razvitum-83-x: 309px;
-$-icons-razvitum-83-y: 97px;
-$-icons-razvitum-83-offset-x: -309px;
-$-icons-razvitum-83-offset-y: -97px;
-$-icons-razvitum-83-width: 91px;
-$-icons-razvitum-83-height: 93px;
-$-icons-razvitum-83-total-width: 491px;
-$-icons-razvitum-83-total-height: 361px;
-$-icons-razvitum-83-image: '../img/spritePNG.png';
-$-icons-razvitum-83: (309px, 97px, -309px, -97px, 91px, 93px, 491px, 361px, '../img/spritePNG.png', 'Icons_Razvitum-83', );
-$-icons-razvitum-84-name: 'Icons_Razvitum-84';
-$-icons-razvitum-84-x: 0px;
-$-icons-razvitum-84-y: 269px;
-$-icons-razvitum-84-offset-x: 0px;
-$-icons-razvitum-84-offset-y: -269px;
-$-icons-razvitum-84-width: 91px;
-$-icons-razvitum-84-height: 92px;
-$-icons-razvitum-84-total-width: 491px;
-$-icons-razvitum-84-total-height: 361px;
-$-icons-razvitum-84-image: '../img/spritePNG.png';
-$-icons-razvitum-84: (0px, 269px, 0px, -269px, 91px, 92px, 491px, 361px, '../img/spritePNG.png', 'Icons_Razvitum-84', );
 $applause-name: 'applause';
-$applause-x: 404px;
-$applause-y: 221px;
-$applause-offset-x: -404px;
-$applause-offset-y: -221px;
+$applause-x: 142px;
+$applause-y: 32px;
+$applause-offset-x: -142px;
+$applause-offset-y: -32px;
 $applause-width: 26px;
 $applause-height: 30px;
-$applause-total-width: 491px;
-$applause-total-height: 361px;
+$applause-total-width: 208px;
+$applause-total-height: 168px;
 $applause-image: '../img/spritePNG.png';
-$applause: (404px, 221px, -404px, -221px, 26px, 30px, 491px, 361px, '../img/spritePNG.png', 'applause', );
+$applause: (142px, 32px, -142px, -32px, 26px, 30px, 208px, 168px, '../img/spritePNG.png', 'applause', );
 $building-name: 'building';
-$building-x: 469px;
-$building-y: 149px;
-$building-offset-x: -469px;
-$building-offset-y: -149px;
+$building-x: 176px;
+$building-y: 25px;
+$building-offset-x: -176px;
+$building-offset-y: -25px;
 $building-width: 18px;
 $building-height: 28px;
-$building-total-width: 491px;
-$building-total-height: 361px;
+$building-total-width: 208px;
+$building-total-height: 168px;
 $building-image: '../img/spritePNG.png';
-$building: (469px, 149px, -469px, -149px, 18px, 28px, 491px, 361px, '../img/spritePNG.png', 'building', );
+$building: (176px, 25px, -176px, -25px, 18px, 28px, 208px, 168px, '../img/spritePNG.png', 'building', );
 $calendar-name: 'calendar';
-$calendar-x: 404px;
-$calendar-y: 97px;
-$calendar-offset-x: -404px;
-$calendar-offset-y: -97px;
+$calendar-x: 95px;
+$calendar-y: 0px;
+$calendar-offset-x: -95px;
+$calendar-offset-y: 0px;
 $calendar-width: 43px;
 $calendar-height: 48px;
-$calendar-total-width: 491px;
-$calendar-total-height: 361px;
+$calendar-total-width: 208px;
+$calendar-total-height: 168px;
 $calendar-image: '../img/spritePNG.png';
-$calendar: (404px, 97px, -404px, -97px, 43px, 48px, 491px, 361px, '../img/spritePNG.png', 'calendar', );
+$calendar: (95px, 0px, -95px, 0px, 43px, 48px, 208px, 168px, '../img/spritePNG.png', 'calendar', );
 $coin-name: 'coin';
-$coin-x: 404px;
-$coin-y: 189px;
-$coin-offset-x: -404px;
-$coin-offset-y: -189px;
+$coin-x: 142px;
+$coin-y: 0px;
+$coin-offset-x: -142px;
+$coin-offset-y: 0px;
 $coin-width: 30px;
 $coin-height: 28px;
-$coin-total-width: 491px;
-$coin-total-height: 361px;
+$coin-total-width: 208px;
+$coin-total-height: 168px;
 $coin-image: '../img/spritePNG.png';
-$coin: (404px, 189px, -404px, -189px, 30px, 28px, 491px, 361px, '../img/spritePNG.png', 'coin', );
+$coin: (142px, 0px, -142px, 0px, 30px, 28px, 208px, 168px, '../img/spritePNG.png', 'coin', );
 $display-name: 'display';
-$display-x: 451px;
-$display-y: 97px;
-$display-offset-x: -451px;
-$display-offset-y: -97px;
+$display-x: 95px;
+$display-y: 52px;
+$display-offset-x: -95px;
+$display-offset-y: -52px;
 $display-width: 36px;
 $display-height: 32px;
-$display-total-width: 491px;
-$display-total-height: 361px;
+$display-total-width: 208px;
+$display-total-height: 168px;
 $display-image: '../img/spritePNG.png';
-$display: (451px, 97px, -451px, -97px, 36px, 32px, 491px, 361px, '../img/spritePNG.png', 'display', );
+$display: (95px, 52px, -95px, -52px, 36px, 32px, 208px, 168px, '../img/spritePNG.png', 'display', );
 $key-name: 'key';
-$key-x: 474px;
-$key-y: 189px;
-$key-offset-x: -474px;
-$key-offset-y: -189px;
+$key-x: 176px;
+$key-y: 57px;
+$key-offset-x: -176px;
+$key-offset-y: -57px;
 $key-width: 16px;
 $key-height: 18px;
-$key-total-width: 491px;
-$key-total-height: 361px;
+$key-total-width: 208px;
+$key-total-height: 168px;
 $key-image: '../img/spritePNG.png';
-$key: (474px, 189px, -474px, -189px, 16px, 18px, 491px, 361px, '../img/spritePNG.png', 'key', );
+$key: (176px, 57px, -176px, -57px, 16px, 18px, 208px, 168px, '../img/spritePNG.png', 'key', );
 $licence-name: 'licence';
-$licence-x: 404px;
-$licence-y: 255px;
-$licence-offset-x: -404px;
-$licence-offset-y: -255px;
+$licence-x: 142px;
+$licence-y: 102px;
+$licence-offset-x: -142px;
+$licence-offset-y: -102px;
 $licence-width: 24px;
 $licence-height: 32px;
-$licence-total-width: 491px;
-$licence-total-height: 361px;
+$licence-total-width: 208px;
+$licence-total-height: 168px;
 $licence-image: '../img/spritePNG.png';
-$licence: (404px, 255px, -404px, -255px, 24px, 32px, 491px, 361px, '../img/spritePNG.png', 'licence', );
+$licence: (142px, 102px, -142px, -102px, 24px, 32px, 208px, 168px, '../img/spritePNG.png', 'licence', );
 $medal-name: 'medal';
-$medal-x: 432px;
-$medal-y: 255px;
-$medal-offset-x: -432px;
-$medal-offset-y: -255px;
+$medal-x: 142px;
+$medal-y: 66px;
+$medal-offset-x: -142px;
+$medal-offset-y: -66px;
 $medal-width: 24px;
 $medal-height: 32px;
-$medal-total-width: 491px;
-$medal-total-height: 361px;
+$medal-total-width: 208px;
+$medal-total-height: 168px;
 $medal-image: '../img/spritePNG.png';
-$medal: (432px, 255px, -432px, -255px, 24px, 32px, 491px, 361px, '../img/spritePNG.png', 'medal', );
+$medal: (142px, 66px, -142px, -66px, 24px, 32px, 208px, 168px, '../img/spritePNG.png', 'medal', );
 $money-name: 'money';
 $money-x: 0px;
 $money-y: 0px;
@@ -203,48 +104,48 @@ $money-offset-x: 0px;
 $money-offset-y: 0px;
 $money-width: 91px;
 $money-height: 168px;
-$money-total-width: 491px;
-$money-total-height: 361px;
+$money-total-width: 208px;
+$money-total-height: 168px;
 $money-image: '../img/spritePNG.png';
-$money: (0px, 0px, 0px, 0px, 91px, 168px, 491px, 361px, '../img/spritePNG.png', 'money', );
+$money: (0px, 0px, 0px, 0px, 91px, 168px, 208px, 168px, '../img/spritePNG.png', 'money', );
 $people-name: 'people';
-$people-x: 438px;
-$people-y: 189px;
-$people-offset-x: -438px;
-$people-offset-y: -189px;
+$people-x: 176px;
+$people-y: 0px;
+$people-offset-x: -176px;
+$people-offset-y: 0px;
 $people-width: 32px;
 $people-height: 21px;
-$people-total-width: 491px;
-$people-total-height: 361px;
+$people-total-width: 208px;
+$people-total-height: 168px;
 $people-image: '../img/spritePNG.png';
-$people: (438px, 189px, -438px, -189px, 32px, 21px, 491px, 361px, '../img/spritePNG.png', 'people', );
+$people: (176px, 0px, -176px, 0px, 32px, 21px, 208px, 168px, '../img/spritePNG.png', 'people', );
 $percent-name: 'percent';
-$percent-x: 436px;
-$percent-y: 149px;
-$percent-offset-x: -436px;
-$percent-offset-y: -149px;
+$percent-x: 95px;
+$percent-y: 128px;
+$percent-offset-x: -95px;
+$percent-offset-y: -128px;
 $percent-width: 29px;
 $percent-height: 29px;
-$percent-total-width: 491px;
-$percent-total-height: 361px;
+$percent-total-width: 208px;
+$percent-total-height: 168px;
 $percent-image: '../img/spritePNG.png';
-$percent: (436px, 149px, -436px, -149px, 29px, 29px, 491px, 361px, '../img/spritePNG.png', 'percent', );
+$percent: (95px, 128px, -95px, -128px, 29px, 29px, 208px, 168px, '../img/spritePNG.png', 'percent', );
 $sheet-name: 'sheet';
-$sheet-x: 404px;
-$sheet-y: 149px;
-$sheet-offset-x: -404px;
-$sheet-offset-y: -149px;
+$sheet-x: 95px;
+$sheet-y: 88px;
+$sheet-offset-x: -95px;
+$sheet-offset-y: -88px;
 $sheet-width: 28px;
 $sheet-height: 36px;
-$sheet-total-width: 491px;
-$sheet-total-height: 361px;
+$sheet-total-width: 208px;
+$sheet-total-height: 168px;
 $sheet-image: '../img/spritePNG.png';
-$sheet: (404px, 149px, -404px, -149px, 28px, 36px, 491px, 361px, '../img/spritePNG.png', 'sheet', );
-$spritesheet-width: 491px;
-$spritesheet-height: 361px;
+$sheet: (95px, 88px, -95px, -88px, 28px, 36px, 208px, 168px, '../img/spritePNG.png', 'sheet', );
+$spritesheet-width: 208px;
+$spritesheet-height: 168px;
 $spritesheet-image: '../img/spritePNG.png';
-$spritesheet-sprites: ($-icons-razvitum-75, $-icons-razvitum-76, $-icons-razvitum-77, $-icons-razvitum-78, $-icons-razvitum-79, $-icons-razvitum-80, $-icons-razvitum-82, $-icons-razvitum-83, $-icons-razvitum-84, $applause, $building, $calendar, $coin, $display, $key, $licence, $medal, $money, $people, $percent, $sheet, );
-$spritesheet: (491px, 361px, '../img/spritePNG.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($applause, $building, $calendar, $coin, $display, $key, $licence, $medal, $money, $people, $percent, $sheet, );
+$spritesheet: (208px, 168px, '../img/spritePNG.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
