--- a/src/scss/blocks/about.sass
+++ b/src/scss/blocks/about.sass
@@ -1,8 +1,12 @@
 @import '../_vars'
 @import '../_fonts'
+@import "../spritePNG"
+@import "../mixins/calc"
+
 
 .about
   &-menu
+    margin: 8px 0 6px 0
     &__item
       color: $headgray
       font-size: 0.875em
@@ -10,13 +14,19 @@
       &:hover
         color: $headgray
   &-carousel
+    padding: 2px 0
+    border-top: 2px solid  #fff
     background-color: $accent
   &__title
+    margin-top: 77px
+    margin-bottom: 38px
     +ff-roboto-light
     font-size: 2.25em
     color: $headgray
     text-align: center
   &__subhead
+    margin-top: 84px
+    margin-bottom: 42px
     +ff-arial
     font-size: 1.125em
     color: $headgray
@@ -26,11 +36,15 @@
     text-align: center
     color: $headgray
     font-size: 1.125em
-    line-height: 1.75em
+    line-height: 1.65em
     &--left
       text-align: left
+    &--docs
+      text-align: left
+      font-size: 1em
   &__list
     &-item
+      margin-bottom: 42px
       padding-left: 70px
       position: relative
       &:before
@@ -57,12 +71,15 @@
         &:before
           content: '3'
   &-greet
+    width: 100%
+    padding: 85px 0 45px 0
+    background-color: #e8e8e8
     &__img-wrap
       max-width: 100%
       img
         width: 100%
         height: auto
-    &__text, p
+    &__text
       +ff-arial
       text-align: center
       color: $headgray
@@ -71,6 +88,25 @@
       text-align: left
     &__text--name
       +ff-arial-bold
+      font-size: 1em
     &__autograph
       width: 50%
       height: auto
+  &-innovations
+    &__list
+    &__item
+      margin-top: 50px
+      font-size: 1em
+      color: $textgray
+      text-align: center
+
+  &-facts
+    &__wrap
+      padding-top: 0
+      padding-bottom: 0
+      margin-bottom: 0
+      min-height: 100px
+      border-bottom: 4px solid #fff
+      background-image: url('/img/factsbg.png')
+      min-height: 100px
+
