стилизовал блок документов на стр. О нас (about)

--- a/src/pages/about.pug
+++ b/src/pages/about.pug
@@ -59,7 +59,15 @@ block content
         p.about__text.about__text--docs Свидетельство предусматривает размещение образовательной, культурно-просветительской, рекламной информации.
         p.about__text.about__text--docs 14 апреля 2017 года Комитетом по образованию города Санкт-Петербурга выдал Акт проверки органом государственного контроля (надзора) юридического лица Автономной некоммерческой организацией «Санкт-Петербургский центр дополнительного профессионального образования».
       .col-md-4.col-sm-12.col-xs-12
-
+        .a.about-docs__list
+          a.about-docs__item(href="/docs/akt-proverki.pdf")
+            img(src="/docs/akt-proverki_th.png", alt="")
+          a.about-docs__item(href="/docs/akt-proverki_th.pdf")
+            img(src="/docs/akt-proverki_th.png", alt="")
+          a.about-docs__item(href="/docs/license.pdf")
+            img(src="/docs/license.png", alt="")
+          a.about-docs__item(href="/docs/ustav_th.pdf")
+            img(src="/docs/ustav.png", alt="")
     .row
       .col-xs-12
         .quotes
