--- a/src/scss/spritePNG.scss
+++ b/src/scss/spritePNG.scss
@@ -20,17 +20,39 @@ $applause-total-width: 208px;
 $applause-total-height: 168px;
 $applause-image: '../img/spritePNG.png';
 $applause: (142px, 32px, -142px, -32px, 26px, 30px, 208px, 168px, '../img/spritePNG.png', 'applause', );
+$arrow-back-name: 'arrow-back';
+$arrow-back-x: 176px;
+$arrow-back-y: 25px;
+$arrow-back-offset-x: -176px;
+$arrow-back-offset-y: -25px;
+$arrow-back-width: 24px;
+$arrow-back-height: 27px;
+$arrow-back-total-width: 208px;
+$arrow-back-total-height: 168px;
+$arrow-back-image: '../img/spritePNG.png';
+$arrow-back: (176px, 25px, -176px, -25px, 24px, 27px, 208px, 168px, '../img/spritePNG.png', 'arrow-back', );
+$arrow-fow-name: 'arrow-fow';
+$arrow-fow-x: 176px;
+$arrow-fow-y: 56px;
+$arrow-fow-offset-x: -176px;
+$arrow-fow-offset-y: -56px;
+$arrow-fow-width: 24px;
+$arrow-fow-height: 27px;
+$arrow-fow-total-width: 208px;
+$arrow-fow-total-height: 168px;
+$arrow-fow-image: '../img/spritePNG.png';
+$arrow-fow: (176px, 56px, -176px, -56px, 24px, 27px, 208px, 168px, '../img/spritePNG.png', 'arrow-fow', );
 $building-name: 'building';
 $building-x: 176px;
-$building-y: 25px;
+$building-y: 87px;
 $building-offset-x: -176px;
-$building-offset-y: -25px;
+$building-offset-y: -87px;
 $building-width: 18px;
 $building-height: 28px;
 $building-total-width: 208px;
 $building-total-height: 168px;
 $building-image: '../img/spritePNG.png';
-$building: (176px, 25px, -176px, -25px, 18px, 28px, 208px, 168px, '../img/spritePNG.png', 'building', );
+$building: (176px, 87px, -176px, -87px, 18px, 28px, 208px, 168px, '../img/spritePNG.png', 'building', );
 $calendar-name: 'calendar';
 $calendar-x: 95px;
 $calendar-y: 0px;
@@ -66,37 +88,37 @@ $display-image: '../img/spritePNG.png';
 $display: (95px, 52px, -95px, -52px, 36px, 32px, 208px, 168px, '../img/spritePNG.png', 'display', );
 $key-name: 'key';
 $key-x: 176px;
-$key-y: 57px;
+$key-y: 119px;
 $key-offset-x: -176px;
-$key-offset-y: -57px;
+$key-offset-y: -119px;
 $key-width: 16px;
 $key-height: 18px;
 $key-total-width: 208px;
 $key-total-height: 168px;
 $key-image: '../img/spritePNG.png';
-$key: (176px, 57px, -176px, -57px, 16px, 18px, 208px, 168px, '../img/spritePNG.png', 'key', );
+$key: (176px, 119px, -176px, -119px, 16px, 18px, 208px, 168px, '../img/spritePNG.png', 'key', );
 $licence-name: 'licence';
 $licence-x: 142px;
-$licence-y: 102px;
+$licence-y: 66px;
 $licence-offset-x: -142px;
-$licence-offset-y: -102px;
+$licence-offset-y: -66px;
 $licence-width: 24px;
 $licence-height: 32px;
 $licence-total-width: 208px;
 $licence-total-height: 168px;
 $licence-image: '../img/spritePNG.png';
-$licence: (142px, 102px, -142px, -102px, 24px, 32px, 208px, 168px, '../img/spritePNG.png', 'licence', );
+$licence: (142px, 66px, -142px, -66px, 24px, 32px, 208px, 168px, '../img/spritePNG.png', 'licence', );
 $medal-name: 'medal';
 $medal-x: 142px;
-$medal-y: 66px;
+$medal-y: 102px;
 $medal-offset-x: -142px;
-$medal-offset-y: -66px;
+$medal-offset-y: -102px;
 $medal-width: 24px;
 $medal-height: 32px;
 $medal-total-width: 208px;
 $medal-total-height: 168px;
 $medal-image: '../img/spritePNG.png';
-$medal: (142px, 66px, -142px, -66px, 24px, 32px, 208px, 168px, '../img/spritePNG.png', 'medal', );
+$medal: (142px, 102px, -142px, -102px, 24px, 32px, 208px, 168px, '../img/spritePNG.png', 'medal', );
 $money-name: 'money';
 $money-x: 0px;
 $money-y: 0px;
@@ -144,7 +166,7 @@ $sheet: (95px, 88px, -95px, -88px, 28px, 36px, 208px, 168px, '../img/spritePNG.p
 $spritesheet-width: 208px;
 $spritesheet-height: 168px;
 $spritesheet-image: '../img/spritePNG.png';
-$spritesheet-sprites: ($applause, $building, $calendar, $coin, $display, $key, $licence, $medal, $money, $people, $percent, $sheet, );
+$spritesheet-sprites: ($applause, $arrow-back, $arrow-fow, $building, $calendar, $coin, $display, $key, $licence, $medal, $money, $people, $percent, $sheet, );
 $spritesheet: (208px, 168px, '../img/spritePNG.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
