--- a/src/pages/about.pug
+++ b/src/pages/about.pug
@@ -15,6 +15,12 @@ block content
     .container
       .row
         .about-carouel.carousel.slide(id="carousel-about", data-ride="carousel")
+          // индикаторы карусели
+          ol.carousel-indicators.hidden-sm.hidden-xs
+            li.active(data-ride="carousel-about", data-slide-to="0")
+            li(data-ride="carousel-about", data-slide-to="1")
+            li(data-ride="carousel-about", data-slide-to="2")
+            li(data-ride="carousel-about", data-slide-to="3")
           .carousel-inner(role="listbox")
             .item.active
               img(src="/img/Banner5.jpg", alt="")
@@ -24,6 +30,14 @@ block content
               img(src="/img/Banner7.jpg", alt="")
             .item
               img(src="/img/Banner8.jpg", alt="")
+          // стрелки карусели
+          a.left.carousel-control.about-carousel__btn.about-carousel__btn--left(href="#carousel-about", role="button", data-slide="prev")
+            span.about-carousel__arrow--back(aria-hidden="true")
+            span.sr-only Previous
+          a.right.carousel-control.about-carousel__btn.about-carousel__btn--right(href="#carousel-about", role="button", data-slide="next")
+            span.about-carousel__arrow--fow(aria-hidden="true")
+            span.sr-only Next
+
   section.about-centre.container(id="about-centre")
     .row
       .col-xs-12
