добавил кнопку глаз на главном меню в заголовке

--- a/src/pug/_header.pug
+++ b/src/pug/_header.pug
@@ -59,46 +59,51 @@ header
         .collapse.navbar-collapse(id="main-menu")
           .top-menu
             .container
-              ul.nav.navbar-nav
-                li.active
-                  a(href="/") Главная
-                li
-                  a(href="/about.html") О нас
-                li
-                  a(href="/study.html") Об обучении
-                //- li.dropdown
-                //-   a.dropdown-toggle(href="https://new.razvitum.ru/about",data-toggle="dropdown", role="button", aria-haspopup="true", aria-expanded="false") О нас #[span.caret]
-                //-     ul.dropdown-menu
-                //-       li
-                //-         a(href="/about/center") О центре
-                //-       li
-                //-         a(href="/about/control") Органы управления
-                //-       li
-                //-         a(href="/about/team") Наша команда
-                //-       li
-                //-         a(href="/about/teachers") Профессорско-преподавательский состав
-                //-       li
-                //-         a(href="/about/structure") Подразделения
-                //-       li
-                //-         a(href="/about/concept") Наша концепция
-                //-       li
-                //-         a(href="/about/vacancies") Вакансии#[span.badge 2]
-                //-       li
-                //-         a(href="https://spbcdpo.ru/sveden", target="_blank") Официальные сведения#[i.fas.fa-link]
-                //- li.dropdown
-                //-   a.dropdown-toggle(href="https://new.razvitum.ru/about/study", data-toggle="dropdown", role="button", aria-haspopup="true", aria-expanded="false") Об обучении#[span.caret]
-                //-     ul.dropdown-menu
-                //-       li
-                //-         a(href="/about/study/technologies") Технологии на службе обучения
-                //-       li
-                //-         a(href="/about/study/features") Особенности программ обучения
-                //-       li
-                //-         a(href="/about/study/solidarity") Программа профессиональной солидарности
-                //-       li
-                //-         a(href="/about/study/howto") Как стать слушателем и пройти обучение
-                li
-                  a(href="https://new.razvitum.ru/programs") Каталог программ
-                //- li
-                //-   a(href="https://new.razvitum.ru/articles") Материалы
-                li
-                  a(href="https://new.razvitum.ru/contacts") Контакты
+              .row
+                .col-md-11
+                  ul.nav.navbar-nav
+                    li.active
+                      a(href="/") Главная
+                    li
+                      a(href="/about.html") О нас
+                    li
+                      a(href="/study.html") Об обучении
+                    //- li.dropdown
+                    //-   a.dropdown-toggle(href="https://new.razvitum.ru/about",data-toggle="dropdown", role="button", aria-haspopup="true", aria-expanded="false") О нас #[span.caret]
+                    //-     ul.dropdown-menu
+                    //-       li
+                    //-         a(href="/about/center") О центре
+                    //-       li
+                    //-         a(href="/about/control") Органы управления
+                    //-       li
+                    //-         a(href="/about/team") Наша команда
+                    //-       li
+                    //-         a(href="/about/teachers") Профессорско-преподавательский состав
+                    //-       li
+                    //-         a(href="/about/structure") Подразделения
+                    //-       li
+                    //-         a(href="/about/concept") Наша концепция
+                    //-       li
+                    //-         a(href="/about/vacancies") Вакансии#[span.badge 2]
+                    //-       li
+                    //-         a(href="https://spbcdpo.ru/sveden", target="_blank") Официальные сведения#[i.fas.fa-link]
+                    //- li.dropdown
+                    //-   a.dropdown-toggle(href="https://new.razvitum.ru/about/study", data-toggle="dropdown", role="button", aria-haspopup="true", aria-expanded="false") Об обучении#[span.caret]
+                    //-     ul.dropdown-menu
+                    //-       li
+                    //-         a(href="/about/study/technologies") Технологии на службе обучения
+                    //-       li
+                    //-         a(href="/about/study/features") Особенности программ обучения
+                    //-       li
+                    //-         a(href="/about/study/solidarity") Программа профессиональной солидарности
+                    //-       li
+                    //-         a(href="/about/study/howto") Как стать слушателем и пройти обучение
+                    li
+                      a(href="https://new.razvitum.ru/programs") Каталог программ
+                    //- li
+                    //-   a(href="https://new.razvitum.ru/articles") Материалы
+                    li
+                      a(href="https://new.razvitum.ru/contacts") Контакты
+                .col-md-1
+                  a.rs-btn.fa-2x(type="button")
+                    span.far.fa-eye
