--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -4,6 +4,7 @@
 @import "_page"
 @import "blocks/article"
 @import "blocks/about"
+@import "blocks/study"
 
 // Главный баннер
 .main-banner
@@ -30,7 +31,7 @@
     text-transform: none
     text-decoration: none
     @media(max-width: 400px)
-      font-size: 3em
+      font-size: 2.75em
   &__text, p
     margin-top: 15px
     +ff-roboto
@@ -39,7 +40,7 @@
     line-height: 1.12em
     color: #fff
     @media(max-width: 400px)
-      font-size: 2em
+      font-size: 1.85em
 
   &__statistic
     margin-top: 97px
